--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
+*{
+  margin: 0px;
+  padding: 0px;
+  /* background-color: wheat; */
+  /* background-color: gray; */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+body{
+  background-color: lightgrey;
+}
+.header{
+  height: 70px;
+  background-color: rgb(44, 40, 40);
+  color: white;
+  margin-top: 0px;
+}
+#main{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 10px ;
+  background-color: lightgray;
+}
+.div{
+
+  height: 500px;
+  width: 400px;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: top;
+  border-radius: 5px;
+  
+ 
+}
+.table{
+  border-collapse: collapse;
+  border-color: black;
+  border-width: 2px;
+  margin-top: 15px;
+  width: 800px;
+}
+button{
+  height: 25px;
+  width: 80%;
+  background-color: rgb(44, 40, 40);
   color: white;
+  margin-top: 10px;
+  border-radius: 7px;
 }
-
-.App-link {
-  color: #61dafb;
+input{
+  position: relative;
+  width: 80%;
+  height: 20px;
 }
+form,select{
+  position: relative;
+  
+  width: 80%;
+  height: 80%;
+  margin-top: 10px;
+}
+select{
+  height: 20px;
+}
+#navbar{
+  background-color:  whitesmoke;
+  margin: 7px;
+  margin-left: 200px;
+  margin-right: 200px;
+  padding: 20px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
